--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GtUZ5M.TppqdmC6ctaihuszJ5Mg99fAwUDl-wYIDltI_8
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.G1ux6b.9__Tm3k36Fzss3R2ntDuWpZO04CPXT5P4Tfv7g
