--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.G5XrjW.-HntqOtD0cS_2psBvrTU71rr6fqoXyPkr9S7mE
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.Gq1lHg.RHUNUgVIbXAeoByIurGQ8ViW6RYvT3NYPDGWVk
