--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.Gq1lHg.RHUNUgVIbXAeoByIurGQ8ViW6RYvT3NYPDGWVk
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GzcyQ3.wSA1Ux3gXoy2DKRFKbCAMQaqv0DQb_81S-rdMA
