--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GzcyQ3.wSA1Ux3gXoy2DKRFKbCAMQaqv0DQb_81S-rdMA
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.G20iWi.PyVy4g64o64yMseEuVHkNd3TC14qyl3UTjNIj0
