--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.G20iWi.PyVy4g64o64yMseEuVHkNd3TC14qyl3UTjNIj0
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GXhzjk.07defjivls4oLpvunfJCkrmMq3gZrVdtNyq53Y
