--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GXhzjk.07defjivls4oLpvunfJCkrmMq3gZrVdtNyq53Y
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GGVVoX.eZ0-2Fp5duWi7YlwWbrSECVw9rjO4_4YMu0zgI
