--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GGVVoX.eZ0-2Fp5duWi7YlwWbrSECVw9rjO4_4YMu0zgI
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GuXa3R.GKLR4r6yvB3AypyBAQd4tCIfDisakilNuY9I2M
