--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GuXa3R.GKLR4r6yvB3AypyBAQd4tCIfDisakilNuY9I2M
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GsWT1X.ZcZOJwsBPZf8VEGl2wh9CtuN26h3L8_1_7ENM0
