--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GsWT1X.ZcZOJwsBPZf8VEGl2wh9CtuN26h3L8_1_7ENM0
+DISCORD_TOKEN=MTE1ODYxOTM2NDI5NjIzNzEwNw.GTwGHG.2Ic2bY9Gn2YA0Mzlm4P_G0E1nhgOjXDnuCXtZ8
